[gd_scene load_steps=12 format=3 uid="uid://dt5s1p42f26h7"]

[ext_resource type="Script" path="res://Scripts/Areas/Act2/story_scroll2.gd" id="1_fvg35"]
[ext_resource type="VideoStream" path="res://Assets/Meta/GlitchEffect.ogv" id="2_lldr2"]
[ext_resource type="AudioStream" uid="uid://b5r2b8njhi5dt" path="res://Assets/Audio/Music/IntroBetterLoop.mp3" id="3_wgvly"]
[ext_resource type="AudioStream" uid="uid://dpyvttinkgb24" path="res://Assets/Audio/GlitchSFX.mp3" id="4_2x8jw"]

[sub_resource type="Animation" id="Animation_vymnj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_fty0i"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vvtxo"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim/Fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fv1tj"]
_data = {
"RESET": SubResource("Animation_vymnj"),
"fade_in": SubResource("Animation_fty0i"),
"fade_out": SubResource("Animation_vvtxo")
}

[sub_resource type="Animation" id="Animation_k5x2c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}

[sub_resource type="Animation" id="Animation_yea10"]
resource_name = "scroll"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 700), Vector2(0, -240)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_foiy3"]
_data = {
"RESET": SubResource("Animation_k5x2c"),
"scroll": SubResource("Animation_yea10")
}

[node name="StoryIntro2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvg35")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 939.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "Welcome to the Kingdom of Goldedge!
A realm of magic, mystery, and adventure.

One day, a powerful dragon seized control over the kingdom.
It overthrew the King, and took stronghold in Magic Mountain, where all magic is stored!



You already know this.

You know this story.

So why would I bother to repeat it for you?


Let's play!

Let's play!

Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play!
Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play!
Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play!
Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play!
Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! Let's play! "
horizontal_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fv1tj")
}

[node name="Fade" type="ColorRect" parent="Anim"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Scroll" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_foiy3")
}
autoplay = "scroll"

[node name="Glitch" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -17.0
offset_right = 1255.0
offset_bottom = 703.0
stream = ExtResource("2_lldr2")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wgvly")
autoplay = true

[node name="GlitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2x8jw")
volume_db = 10.0
pitch_scale = 0.4

[node name="T1" type="Timer" parent="."]
wait_time = 9.0
one_shot = true
autostart = true

[node name="T2" type="Timer" parent="."]
wait_time = 13.0
one_shot = true
autostart = true

[node name="T3" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="T4" type="Timer" parent="."]
wait_time = 16.0
one_shot = true
autostart = true

[node name="T5" type="Timer" parent="."]
wait_time = 16.5
one_shot = true
autostart = true

[node name="T6" type="Timer" parent="."]
wait_time = 16.75
one_shot = true
autostart = true

[node name="T7" type="Timer" parent="."]
wait_time = 17.0
one_shot = true
autostart = true

[node name="T8" type="Timer" parent="."]
wait_time = 17.25
one_shot = true
autostart = true

[node name="T9" type="Timer" parent="."]
wait_time = 17.5
one_shot = true
autostart = true

[node name="T10" type="Timer" parent="."]
wait_time = 17.75
one_shot = true
autostart = true

[node name="T11" type="Timer" parent="."]
wait_time = 18.0
one_shot = true
autostart = true

[node name="T12" type="Timer" parent="."]
wait_time = 18.25
one_shot = true
autostart = true

[node name="T13" type="Timer" parent="."]
wait_time = 18.5
one_shot = true
autostart = true

[node name="T14" type="Timer" parent="."]
wait_time = 18.75
one_shot = true
autostart = true

[node name="T15" type="Timer" parent="."]
wait_time = 19.0
one_shot = true
autostart = true

[node name="T16" type="Timer" parent="."]
wait_time = 19.25
one_shot = true
autostart = true

[node name="T17" type="Timer" parent="."]
wait_time = 19.5
one_shot = true
autostart = true

[node name="T18" type="Timer" parent="."]
wait_time = 19.75
one_shot = true
autostart = true

[node name="T19" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="Scroll" to="." method="_on_scroll_animation_finished"]
[connection signal="finished" from="Glitch" to="." method="_on_glitch_finished"]
[connection signal="timeout" from="T1" to="." method="_on_t_1_timeout"]
[connection signal="timeout" from="T2" to="." method="_on_t_2_timeout"]
[connection signal="timeout" from="T3" to="." method="_on_t_3_timeout"]
[connection signal="timeout" from="T4" to="." method="_on_t_4_timeout"]
[connection signal="timeout" from="T5" to="." method="_on_t_5_timeout"]
[connection signal="timeout" from="T6" to="." method="_on_t_6_timeout"]
[connection signal="timeout" from="T7" to="." method="_on_t_7_timeout"]
[connection signal="timeout" from="T8" to="." method="_on_t_8_timeout"]
[connection signal="timeout" from="T9" to="." method="_on_t_9_timeout"]
[connection signal="timeout" from="T10" to="." method="_on_t_10_timeout"]
[connection signal="timeout" from="T11" to="." method="_on_t_11_timeout"]
[connection signal="timeout" from="T12" to="." method="_on_t_12_timeout"]
[connection signal="timeout" from="T13" to="." method="_on_t_13_timeout"]
[connection signal="timeout" from="T14" to="." method="_on_t_14_timeout"]
[connection signal="timeout" from="T15" to="." method="_on_t_15_timeout"]
[connection signal="timeout" from="T16" to="." method="_on_t_16_timeout"]
[connection signal="timeout" from="T17" to="." method="_on_t_17_timeout"]
[connection signal="timeout" from="T18" to="." method="_on_t_18_timeout"]
[connection signal="timeout" from="T19" to="." method="_on_t_19_timeout"]
